<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculadora</string>
    <string name="action_settings">Configurações</string>
    <string name="hello_world">Olá Mundo!</string>
    <string name="valor1">Valor 1:</string>
    <string name="valor2">Valor 2:</string>
    <string name="btnSomar">+</string>
    <string name="txtResultado">"Resultado"</string>
    <string name="btnSubtrair">-</string>
    <string name="btnDividir">/</string>
    <string name="btnMultiplicar">x</string>

</resources>
