<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CalculadoraActivity" >

    <Button
        android:id="@+id/btnSubtrair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSomar"
        android:layout_alignBottom="@+id/btnSomar"
        android:layout_toRightOf="@+id/btnSomar"
        android:text="@string/btnSubtrair" />

    <TextView
        android:id="@+id/txtValor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSomar"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/valor1" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSomar"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:text="@string/txtResultado" />

    <Button
        android:id="@+id/btnSomar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnDividir"
        android:layout_alignBottom="@+id/btnDividir"
        android:layout_alignParentLeft="true"
        android:text="@string/btnSomar" />

    <Button
        android:id="@+id/btnDividir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtResultado"
        android:layout_marginBottom="42dp"
        android:layout_toRightOf="@+id/btnSubtrair"
        android:text="@string/btnDividir" />

    <Button
        android:id="@+id/btnMultiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnDividir"
        android:layout_alignBottom="@+id/btnDividir"
        android:layout_toRightOf="@+id/btnDividir"
        android:text="@string/btnMultiplicar" />

    <TextView
        android:id="@+id/txtValor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtValor1"
        android:layout_below="@+id/txtValor1"
        android:layout_marginTop="106dp"
        android:text="@string/valor2" />

    <EditText
        android:id="@+id/edtValor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtValor2"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/edtValor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtValor1"
        android:layout_below="@+id/txtValor1"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal" >

        <requestFocus />
    </EditText>

</RelativeLayout>
